--- a/experiment/simulation/index.html
+++ b/experiment/simulation/index.html
@@ -12,9 +12,7 @@
                  (06hpathak@gmail.com)
                2.Aysha
                  (satsangiaysha@gmail.com)
-               3.Shivangi Gupta
-                  (guptashivangi95366@gmail.com)
-                  Instiute Name: Dayalbagh Educational Instiute, Agra" -->
+  Instiute Name: Dayalbagh Educational Instiute, Agra" -->
 </head>
 
 <body>
@@ -114,116 +112,78 @@
                   <tr>
                     <th> </th>
                     <th>Trial 1</th>
-                    <th>Trial 2</th>
-                    <th>Trial 3</th>
           
                   <tr>
                     <td>Collision Type </td>
                     <td><span id="collision_type"></span> </td>
-                    <td> </td>
-                    <td> </td>
                   </tr>
                   <tr>
                     <td>Mass of Gilder 1 m<sub>1</sub> (kg) </td>
                     <td><span id="mass1">0.2</span> </td>
-                    <td> </td>
-                    <td> </td>
                   </tr>
                   <tr>
                     <td>Mass of Gilder 2 m<sub>2</sub> (kg)</td>
                     <td><span id="mass2">0.2</span> </td>
-                    <td> </td>
-                    <td> </td>
                   </tr>
                   <tr>
                     <td>Length of the Gilder 1 l<sub>1</sub> (cm) </td>
                     <td><span id="length1">5</span> </td>
-                    <td> </td>
-                    <td> </td>
                   </tr>
                   <tr>
                     <td>Length of Gilder 2 l<sub>2</sub> (cm)</td>
                     <td><span id="length2">5</span> </td>
-                    <td> </td>
-                    <td> </td>
                   </tr>
                   <tr>
                     <td>Initial velocity of Glider 1 v<sub>1</sub>  (m/s)</td>
                     <td><span id="velocity1">0.1</span> </td>
-                    <td> </td>
-                    <td> </td>
                   </tr>
                   <tr>
                     <td>Initial velocity of Glider 2 v<sub>2</sub> (m/s) </td>
                     <td>0</td>
-                    <td> </td>
-                    <td> </td>
                   </tr>
                   <tr>
                     <td>Final velocity of Glider 2 v<sub>1</sub>’ (m/s) </td>
                     <td><span id="FinalVelocity_V1">0</span></td>
-                    <td> </td>
-                    <td> </td>
                   </tr>
                   <tr>
                     <td>Final velocity of Glider 2 v<sub>2</sub>’ (m/s) </td>
                     <td><span id="FinalVelocity_V2">0</span></td>
-                    <td> </td>
-                    <td> </td>
                   </tr> 
                   <tr>
                     <td>Initial Momentum of Glider 1 p<sub>1</sub> (kg-m/s) </td>
                     <td><span id="InitialMomentum_V1">0</span> </td>
-                    <td> </td>
-                    <td> </td>
                   </tr>  
                   <tr>
                     <td>Initial Momentum of Glider 2 p<sub>2</sub> (kg-m/s) </td>
                     <td>0</td>
-                    <td> </td>
-                    <td> </td>
                   </tr>  
                   <tr>
                     <td>Final Momentum of Glider 1 p<sub>1</sub>’ (kg-m/s)</td>
-                    <td> <span id="FinalalMomentum_V1">0</span> </td>
-                    <td> </td>
-                    <td> </td>
+                    <td> <span id="FinalMomentum_V1">0</span> </td>
                   </tr>  
                   <tr>
                     <td>Final Momentum of Glider 2 p<sub>2</sub>’ (kg-m/s)</td>
-                    <td> <span id="FinalalMomentum_V2">0</span></td>
-                    <td> </td>
-                    <td> </td>
+                    <td> <span id="FinalMomentum_V2">0</span></td>
                   </tr>
                   <tr>
                     <td>Percentage Difference in Momentum </td>
                     <td><span id="percentage_diff_momentum">0</span> </td>
-                    <td> </td>
-                    <td> </td>
                   </tr>
                   <tr>
                     <td>Coefficient of Restitution e </td>
                     <td> <span id="Coef_Of_Res">0</span> </td>
-                    <td> </td>
-                    <td> </td>
                   </tr>
                   <tr>
                     <td>Total Initial Kinetic Energy KE<sub>1</sub> (J) </td>
                     <td><span id="total_Initial_KE">0</span>  </td>
-                    <td> </td>
-                    <td> </td>
                   </tr>
                   <tr>
                     <td>Total Final Kinetic Energy KE<sub>1</sub> (J) </td>
                     <td><span id="total_Final_KE">0</span>  </td>
-                    <td> </td>
-                    <td> </td>
                   </tr>
                   <tr>
                     <td>Percentage Difference in Kinetic Energy </td>
                     <td><span id="percentage_diff_KE">0</span>  </td>
-                    <td> </td>
-                    <td> </td>
                   </tr>
                 </table>
 
@@ -240,9 +200,18 @@
 
   </div>
 
-  
-<script src="./js/main.js"></script>
-
+  <script src="./js/main.js"></script>
+<div id="copyright"
+    title="Developer : Harsh Pathak and Aysha,Subject Expertise : Mr.Jinshad.U, Dayalbagh Educational Instiute,Agra ">
+  </div>
+  <div id="Developer_information" title="Developer Name:
+               1.Harsh Pathak
+                 (06hpathak@gmail.com)
+               2.Aysha
+                 (satsangiaysha@gmail.com)
+  Subject Expertise : Mr.Jinshad.U
+  Instiute Name: Dayalbagh Educational Instiute, Agra">
+  </div>
 </body>
 
 </html>
