updated review changes

--- a/experiment/simulation/index.html
+++ b/experiment/simulation/index.html
@@ -169,6 +169,33 @@
                 </button>
               </div>
             </div>
+            <div
+              id="energyLossInfo"
+              style="
+                margin-top: 20px;
+                padding: 12px 15px;
+                background-color: #d0e8f2;
+                border: 1px solid #0066cc;
+                border-radius: 4px;
+                text-align: left;
+              "
+            >
+              <p
+                style="
+                  margin: 0;
+                  color: #003d99;
+                  font-weight: normal;
+                  font-size: 12px;
+                  font-style: italic;
+                  line-height: 1.4;
+                "
+              >
+                <strong>Note:</strong> Experimental values are adjusted for an
+                estimated
+                <strong id="lossPercentageDisplay">2-5%</strong> mechanical
+                loss.
+              </p>
+            </div>
 
             <!-- OBSERVATION TABLE BUTTON -->
             <a class="table_button" href="#popup1">Observation Table</a>
